Removed recursive-readdir dependency (possibly temporary)

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "homepage": "https://github.com/MichielvdVelde/asloc#readme",
   "dependencies": {
-    "commander": "^2.8.1",
-    "recursive-readdir": "^1.2.1"
+    "commander": "^2.8.1"
   }
 }
